@@ -3,6 +3,16 @@ Concurrency Programming Assignment
 
 Video link: https://bit.ly/3trMoPQ 
 
+We could not upload the JAR file here since Github have limit the size of the uploaded file to 25MB only but the JAR was 80+MB.
+Therefore we upload it here in Google Drive: https://bit.ly/3zv8e9r
+
+To open the Museum Simulator JAR, we have to run this command in the terminal:
+
+java --module-path <JavaFX 11.0.2 lib file path> --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar Assignment.jar
+
+Replace <JavaFX 11.0.2 lib file path> with your JavaFX library file path. The version that we are using is JavaFX SDK 11.0.2.
+Inside the download link, we have include the .bat file that contains the command above. Please amend the .bat using your text editor to change the JavaFX lib file path.
+
 Museum Simulator by:
 
 Zikri
